# AlphaForge

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  test_connectivity.py
.github/workflows/: build-exe.yml  docker-build.yml
config/: settings.py
prompts/common/: preamble.md
prompts/macro/: sentiment.md
prompts/tasks/: task_a_momentum.md
src/agents/: base_agent.py  llm_client.py  prompt_renderer.py
src/agents/decision/: cro_filter.py
src/agents/macro/: sentiment_agent.py
src/agents/tasks/: task_a_momentum.py
src/data/: akshare_client.py  fund_flow.py  index_data.py  market_context.py  market_data.py  sector_data.py  sentiment_data.py
src/pipeline/: daily_runner.py  reporter.py
